[package]
name = "simd-pcg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.5"
rand_core = "0.6.4"
rand_pcg = "0.3.1"
getrandom = "0.2.8"

[dev-dependencies]
# criterion = "0.4.0"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false